--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "prepublishOnly": "npm run babelBuild && if [ \"$CI\" = '' ]; then node -p 'JSON.parse(process.env.npm_package_config_manualPublishMessage)'; exit 1; fi",
     "semantic-release": "SEMANTIC_COMMITLINT_SKIP=f4543f643bac890c627d538e6200c5f5a1d45ebc semantic-release",
-    "test": "npm run babelBuild; DRIVER=mongoist jest --forceExit && DRIVER=native jest --forceExit"
+    "test": "npm run babelBuild; DRIVER=mongoist jest --forceExit && DRIVER=native jest"
   },
   "repository": {
     "type": "git",
@@ -40,10 +40,10 @@
   "dependencies": {
     "base64-url": "^2.2.0",
     "bson": "^4.7.0",
-    "object-path": "^0.11.5",
+    "object-path": "^0.11.8",
     "projection-utils": "^1.1.0",
     "semver": "^5.4.1",
-    "underscore": "^1.9.2"
+    "underscore": "^1.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
@@ -55,14 +55,14 @@
     "@mixmaxhq/semantic-release-config": "^2.0.0",
     "babel-jest": "^29.0.0",
     "cz-conventional-changelog": "^3.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-config-mixmax": "^4.11.2",
-    "jest": "^26.0.1",
+    "jest": "^29.6.2",
     "mockgoose": "^8.0.4",
-    "mongodb": "^2.2.11",
+    "mongodb": "^3.7.4",
     "mongodb-memory-server": "6.9.6",
     "mongoist": "^2.7.0",
-    "mongoose": "5.11.10",
+    "mongoose": "^5.13.20",
     "prettier": "^1.19.1",
     "semantic-release": "^17.2.3"
   },
